# writeup-automatizator

./: .gitignore  README.md  pyproject.toml  requirements.txt  wup_config.yaml
source/: api.py  config.py  exceptions.py  main.py  markdown.py  models.py  services.py  storage.py  tui.py  utils.py
source/templates/: default.md
