[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "writeup"
version = "0.1.0"
description = "Writeup Automator"
dependencies = [
    "typer",
    "rich",
    "jinja2",
    "pydantic"
]

[project.scripts]
writeup = "source.main:app"

[tool.hatch.build.targets.wheel]
packages = ["source"]
