[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "writeup-automatizator"
version = "0.1.0"
description = "writeup-automatizator"
dependencies = [
    "typer",
    "rich",
    "jinja2",
    "pydantic",
    "click",
    "telegraph",
    "markdown",
    "python-dotenv",
    "beautifulsoup4"
]

[project.scripts]
writeup = "source.main:app"
wup = "source.main:app"

[tool.hatch.build.targets.wheel]
packages = ["source"]
